fix QuizAttemptTakingDTO to include attempts inside questions not the other way around cuz attempts might be empty but never the questions